--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,19 +1,21 @@
-# This workflow will upload a Python Package to PyPI when a release is created
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Upload Python Package
 
 on:
-  release:
-    types: [published]
+  # Ручной запуск из интерфейса GitHub
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Версия для релиза (например, v0.1.0)'
+        required: true
+        default: 'v0.1.0'
+      create_release:
+        description: 'Создать релиз на GitHub'
+        required: true
+        type: boolean
+        default: true
 
 permissions:
-  contents: read
+  contents: write # Нужно для создания релиза
 
 jobs:
   release-build:
@@ -25,10 +27,16 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.x"
+          
+      - name: Update version in pyproject.toml
+        if: ${{ github.event.inputs.version != '' }}
+        run: |
+          # Получаем версию без префикса 'v'
+          VERSION=$(echo "${{ github.event.inputs.version }}" | sed 's/^v//')
+          sed -i "s/version = \"[^\"]*\"/version = \"$VERSION\"/" pyproject.toml
 
       - name: Build release distributions
         run: |
-          # NOTE: put your own distribution build steps here.
           python -m pip install build
           python -m build
 
@@ -37,25 +45,27 @@ jobs:
         with:
           name: release-dists
           path: dist/
+          
+      - name: Create Release
+        if: ${{ github.event.inputs.create_release == 'true' }}
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ github.event.inputs.version }}
+          name: Release ${{ github.event.inputs.version }}
+          generate_release_notes: true
+          files: |
+            dist/*
 
   pypi-publish:
     runs-on: ubuntu-latest
     needs:
       - release-build
     permissions:
-      # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
 
-    # Dedicated environments with protections for publishing are strongly recommended.
-    # For more information, see: https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#deployment-protection-rules
     environment:
       name: pypi
-      # OPTIONAL: uncomment and update to include your PyPI project URL in the deployment status:
-      # url: https://pypi.org/p/YOURPROJECT
-      #
-      # ALTERNATIVE: if your GitHub Release name is the PyPI project version string
-      # ALTERNATIVE: exactly, uncomment the following line instead:
-      # url: https://pypi.org/project/YOURPROJECT/${{ github.event.release.name }}
+      url: https://pypi.org/p/moy-nalog
 
     steps:
       - name: Retrieve release distributions
