--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,11 @@
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "moy-nalog"
 version = "0.1.0"
 description = "Python клиент для работы с API сервиса Мой налог"
-readme = "README.md"
 authors = [
     {name = "senylar", email = "senyvlar@gmail.com"}
 ]
@@ -20,6 +19,7 @@ dependencies = [
     "requests",
     "pydantic",
 ]
+readme = {file = "README.md", content-type = "text/markdown"}
 
 [project.urls]
 "Homepage" = "https://github.com/senylar/MoyNalogPy"
