--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "moy-nalog"
+name = "moy-nalog-py"
 version = "0.1.0"
 description = "Python клиент для работы с API сервиса Мой налог"
 authors = [
