refactor: update authentication and configuration handling in schemas.py and auth.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,6 @@ readme = {file = "README.md", content-type = "text/markdown"}
 [project.urls]
 "Homepage" = "https://github.com/senylar/MoyNalogPy"
 "Bug Tracker" = "https://github.com/senylar/MoyNalogPy/issues"
+
+[project.scripts]
+moynalog-auth = "MoyNalogPy.auth:main"
